[gd_scene load_steps=5 format=3 uid="uid://cwcepou6wxegl"]

[ext_resource type="Script" path="res://UI/PauseMenu/PauseMenu.gd" id="1"]
[ext_resource type="Theme" uid="uid://dsgu4tme5hp8f" path="res://Themes/Menu/menu_theme.tres" id="2_qj15y"]
[ext_resource type="Texture2D" uid="uid://jvvqc4manxa" path="res://assets/ButtonsV3/ButtonUp.png" id="3_1gi43"]
[ext_resource type="Texture2D" uid="uid://4exmars5c0oj" path="res://assets/ButtonsV3/ButtonDown.png" id="5"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_qj15y")

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(1, 1, 1, 0.490196)

[node name="Center" type="CenterContainer" parent="Control"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox" type="VBoxContainer" parent="Control/Center"]
layout_mode = 2
size_flags_stretch_ratio = 3.13
theme_override_constants/separation = 100
alignment = 1

[node name="Continue" type="TextureButton" parent="Control/Center/VBox"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource("3_1gi43")
texture_pressed = ExtResource("5")
texture_hover = ExtResource("5")

[node name="CenterContainer" type="CenterContainer" parent="Control/Center/VBox/Continue"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Label" type="Label" parent="Control/Center/VBox/Continue/CenterContainer"]
layout_mode = 2
text = "Continue"

[node name="Restart" type="TextureButton" parent="Control/Center/VBox"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource("3_1gi43")
texture_pressed = ExtResource("5")
texture_hover = ExtResource("5")

[node name="CenterContainer" type="CenterContainer" parent="Control/Center/VBox/Restart"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Label" type="Label" parent="Control/Center/VBox/Restart/CenterContainer"]
layout_mode = 2
text = "Restart"

[node name="MainMenu" type="TextureButton" parent="Control/Center/VBox"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource("3_1gi43")
texture_pressed = ExtResource("5")
texture_hover = ExtResource("5")

[node name="CenterContainer" type="CenterContainer" parent="Control/Center/VBox/MainMenu"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Label" type="Label" parent="Control/Center/VBox/MainMenu/CenterContainer"]
layout_mode = 2
text = "Menu"

[connection signal="pressed" from="Control/Center/VBox/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Control/Center/VBox/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Control/Center/VBox/MainMenu" to="." method="_on_MainMenu_pressed"]
